{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 41,
  "lineage": "76b8191a-1b9a-c004-601c-856747c0b02e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkInterfaces/nic-admin-01",
            "internal_domain_name_suffix": "guwixz0xxhaelm2xbgu2fynggh.oslx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.100.20",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-admin"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "norwayeast",
            "name": "nic-admin-01",
            "private_ip_address": "10.10.100.20",
            "private_ip_addresses": [
              "10.10.100.20"
            ],
            "resource_group_name": "fsi-bedrift"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet_admin",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkInterfaces/nic-ansible-01",
            "internal_domain_name_suffix": "guwixz0xxhaelm2xbgu2fynggh.oslx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.10.50",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-server"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "norwayeast",
            "name": "nic-ansible-01",
            "private_ip_address": "10.10.10.50",
            "private_ip_addresses": [
              "10.10.10.50"
            ],
            "resource_group_name": "fsi-bedrift"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet_server",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_dc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkInterfaces/nic-dc-01",
            "internal_domain_name_suffix": "guwixz0xxhaelm2xbgu2fynggh.oslx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.11.20",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-dc"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "norwayeast",
            "name": "nic-dc-01",
            "private_ip_address": "10.10.11.20",
            "private_ip_addresses": [
              "10.10.11.20"
            ],
            "resource_group_name": "fsi-bedrift"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet_dc",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkInterfaces/nic-docker-01",
            "internal_domain_name_suffix": "guwixz0xxhaelm2xbgu2fynggh.oslx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.30.30",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-dmz"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "norwayeast",
            "name": "nic-docker-01",
            "private_ip_address": "10.10.30.30",
            "private_ip_addresses": [
              "10.10.30.30"
            ],
            "resource_group_name": "fsi-bedrift"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet_dmz",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_fs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkInterfaces/nic-fs-01",
            "internal_domain_name_suffix": "guwixz0xxhaelm2xbgu2fynggh.oslx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.10.21",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-server"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "norwayeast",
            "name": "nic-fs-01",
            "private_ip_address": "10.10.10.21",
            "private_ip_addresses": [
              "10.10.10.21"
            ],
            "resource_group_name": "fsi-bedrift"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet_server",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-admin",
            "location": "norwayeast",
            "name": "nsg-admin",
            "resource_group_name": "fsi-bedrift",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_dc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-dc",
            "location": "norwayeast",
            "name": "nsg-dc",
            "resource_group_name": "fsi-bedrift",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-dmz",
            "location": "norwayeast",
            "name": "nsg-dmz",
            "resource_group_name": "fsi-bedrift",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-server",
            "location": "norwayeast",
            "name": "nsg-server",
            "resource_group_name": "fsi-bedrift",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "admin_to_dc_ad",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "135",
              "389",
              "445",
              "636",
              "88"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-dc/securityRules/Allow-Admin-To-DC-AD",
            "name": "Allow-Admin-To-DC-AD",
            "network_security_group_name": "nsg-dc",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "fsi-bedrift",
            "source_address_prefix": "10.10.100.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_dc",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "admin_to_dc_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "53",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-dc/securityRules/Allow-Admin-To-DC-DNS",
            "name": "Allow-Admin-To-DC-DNS",
            "network_security_group_name": "nsg-dc",
            "priority": 110,
            "protocol": "*",
            "resource_group_name": "fsi-bedrift",
            "source_address_prefix": "10.10.100.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_dc",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "admin_to_dc_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-dc/securityRules/Allow-Admin-To-DC-RDP",
            "name": "Allow-Admin-To-DC-RDP",
            "network_security_group_name": "nsg-dc",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "fsi-bedrift",
            "source_address_prefix": "10.10.100.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_dc",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "admin_to_dmz_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-dmz/securityRules/Allow-Admin-To-DMZ-SSH",
            "name": "Allow-Admin-To-DMZ-SSH",
            "network_security_group_name": "nsg-dmz",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "fsi-bedrift",
            "source_address_prefix": "10.10.100.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_dmz",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "admin_to_server_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-server/securityRules/Allow-Admin-To-Server-RDP",
            "name": "Allow-Admin-To-Server-RDP",
            "network_security_group_name": "nsg-server",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "fsi-bedrift",
            "source_address_prefix": "10.10.100.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_server",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "admin_to_server_smb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "445",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-server/securityRules/Allow-Admin-To-Server-SMB",
            "name": "Allow-Admin-To-Server-SMB",
            "network_security_group_name": "nsg-server",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "fsi-bedrift",
            "source_address_prefix": "10.10.100.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_server",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_dmz_to_dc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "10.10.11.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-dmz/securityRules/Deny-DMZ-To-DC",
            "name": "Deny-DMZ-To-DC",
            "network_security_group_name": "nsg-dmz",
            "priority": 140,
            "protocol": "*",
            "resource_group_name": "fsi-bedrift",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_dmz",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_dmz_to_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "10.10.10.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-dmz/securityRules/Deny-DMZ-To-Server",
            "name": "Deny-DMZ-To-Server",
            "network_security_group_name": "nsg-dmz",
            "priority": 130,
            "protocol": "*",
            "resource_group_name": "fsi-bedrift",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_dmz",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "internet_to_dmz_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-dmz/securityRules/Allow-Internet-To-DMZ-HTTP",
            "name": "Allow-Internet-To-DMZ-HTTP",
            "network_security_group_name": "nsg-dmz",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "fsi-bedrift",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_dmz",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "internet_to_dmz_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-dmz/securityRules/Allow-Internet-To-DMZ-HTTPS",
            "name": "Allow-Internet-To-DMZ-HTTPS",
            "network_security_group_name": "nsg-dmz",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "fsi-bedrift",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_dmz",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "server_to_dc_ad",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "135",
              "389",
              "445",
              "53",
              "636",
              "88"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-dc/securityRules/Allow-Server-To-DC-AD",
            "name": "Allow-Server-To-DC-AD",
            "network_security_group_name": "nsg-dc",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "fsi-bedrift",
            "source_address_prefix": "10.10.10.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_dc",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/publicIPAddresses/pip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.251.186.15",
            "ip_version": "IPv4",
            "location": "norwayeast",
            "name": "pip-bastion",
            "resource_group_name": "fsi-bedrift",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureBastionSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.200.0/26"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "fsi-bedrift",
            "virtual_network_name": "vnet-bedrift"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.100.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-admin",
            "name": "snet-admin",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "fsi-bedrift",
            "virtual_network_name": "vnet-bedrift"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_dc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.11.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-dc",
            "name": "snet-dc",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "fsi-bedrift",
            "virtual_network_name": "vnet-bedrift"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.30.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-dmz",
            "name": "snet-dmz",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "fsi-bedrift",
            "virtual_network_name": "vnet-bedrift"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-server",
            "name": "snet-server",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "fsi-bedrift",
            "virtual_network_name": "vnet-bedrift"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "admin_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-admin",
            "network_security_group_id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-admin",
            "subnet_id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-admin"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_admin",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet_admin",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "dc_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-dc",
            "network_security_group_id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-dc",
            "subnet_id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_dc",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet_dc",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "dmz_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-dmz",
            "network_security_group_id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-dmz",
            "subnet_id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-dmz"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_dmz",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet_dmz",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "server_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-server",
            "network_security_group_id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/networkSecurityGroups/nsg-server",
            "subnet_id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift/subnets/snet-server"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_server",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet_server",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e78b2c35-b957-45c0-b397-09a9c2e1a637",
            "id": "/subscriptions/bbfda792-6928-4301-890f-105cc93a9c21/resourceGroups/fsi-bedrift/providers/Microsoft.Network/virtualNetworks/vnet-bedrift",
            "location": "norwayeast",
            "name": "vnet-bedrift",
            "resource_group_name": "fsi-bedrift"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}